[metadata]
name = mbGDML
author = Alex M. Maldonado
author_email = aalexmmaldonado@gmail.com
description = Many-body implementation of gradient-domain machine learning potentials
url = https://github.com/keithgroup/mbGDML
license = MIT license
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry

[options]
python_requires= >=3.7

[versioneer]
VCS = git
style = pep440-old
versionfile_source = mbgdml/_version.py
versionfile_build = mbgdml/_version.py
tag_prefix = ''

[pylint]
max-line-length = 88
